--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Title-->
   <title>GA-CV</title>
   <!-- Description-->
-  <meta name="description" content="Personal Portfolio Template">
+  <meta name="description" content="CV AUGUSTIN GRAH ">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Favicons-->
   <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
