--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <div class="col-12 col-lg-7 info-content">
                   <div class="content-block">
                     <h2 class="content-subtitle">Qui suis-je?</h2>
-                    <h6 class="content-title">Je suis Ange Augustin GRAH -Developpeur Full-Stack, Graphiste,Analyste de données</h6>
+                    <h6 class="content-title">Je suis Ange Augustin GRAH -Developpeur Full-Stack, Graphiste,Data Analyste</h6>
                     <div class="content-description">
                       <p>Passionnée de l'univers de l'informatique et doté d'une grande curiosité, je suis diplomée de l'Université Felix Houphouët BOIGNY d'ABIDJAN COCODY. Polyvalent et fort de 4 ans d'expérience. je me suis spécialisé dans le develeppement Back-End et la création d'Application Web et Solution Informatique en générale, je suis aussi capable de faire de l'intégration  Web , d'organiser des sondages et analyser les données et de l'Infographie.</p>
                     </div>
@@ -349,11 +349,11 @@
                   <div class="col-block education">
                     <h3 class="col-title">Education</h3>
                     <div class="resume-item"><span class="item-arrow"></span>
-                      <h5 class="item-title">Master 2 de Base de données et genie logiciel</h5><span class="item-details">UFR Mathématique Informatique Université Felix Houphouet Boigny Cocody / 2020-2021</span>
-                      <p class="item-description">Theme de soutenance : Digitalisation des services d'aide à l'education </p>
+                      <h5 class="item-title">Master 2 en Base de données et genie logiciel</h5><span class="item-details">UFR Mathématique Informatique Université Felix Houphouet Boigny Cocody / 2020-2021</span>
+                      <p class="item-description">Theme de soutenance : Mise en place d'une plateForme de suivi et de gestion des activités académique, cas du lycée moderne d'Arrah </p>
                     </div>
                     <div class="resume-item"><span class="item-arrow"></span>
-                      <h5 class="item-title">Master 1 de Base de données et genie logiciel : Mention Bien</h5><span class="item-details">UFR Mathématique Informatique Université Felix Houphouet Boigny Cocody / 2020-2021</span>
+                      <h5 class="item-title">Maitrise en Base de données et genie logiciel : Mention Bien</h5><span class="item-details">UFR Mathématique Informatique Université Felix Houphouet Boigny Cocody / 2020-2021</span>
                       
                     </div>
                     <div class="resume-item"><span class="item-arrow"></span>
