--- a/index.html
+++ b/index.html
@@ -373,7 +373,27 @@
                   <div class="col-block experience">
                     <h3 class="col-title">Experience</h3>
                     <div class="resume-item"><span class="item-arrow"></span>
-                      <h5 class="item-title">Professeur python</h5><span class="item-details">WisdomEducation / 2021</span>
+                      <h5 class="item-title">Assistant responsable contrôle logistique/h5><span class="item-details">Porteo Group/ Mai 2023 - En cours 2023</span>
+                      <p class="item-description"> -Production de la situation matériel du groupe 
+	-Taux de pannes; fréquences par type de pannes 
+	-Taux des sinistres
+-Contrôle des factures de location externe du groupe
+-Mise en place d’un plan de suivi de la fluctuation des véhicules du pack auto au garage et  production du rapport d’éfficacité du garage.
+-Contrôle facture fournisseur d’équipement de réparation.
+-Production des statisques, Analyse  et contrôle des demande d’achats
+-Suivie  assusrances et Entretien du groupe</p>
+                    </div>
+                     <div class="resume-item"><span class="item-arrow"></span>
+                      <h5 class="item-title">Assistant responsable contrôle GPS</h5><span class="item-details">Porteo Group/ Janvier 2023 - Mai 2023</span>
+                      <p class="item-description"> -Suivi du Seuil de travail  journalier des engins de l’entréprise, Elaboration de la Statistique  périodique, Conception et réalisation d’un tableau de bord avec power bi pour la visualisation du processus de suivi de l’etat des boitiers GPS et l’activité du pack automobile du groupe porteo.
+                        Consolidation et traitement de la base de données du service de suivi GPS</p>
+                    </div>
+                     <div class="resume-item"><span class="item-arrow"></span>
+                      <h5 class="item-title">Assistant responsable </h5><span class="item-details">Abidjan GPS / Novembre 2022 - Janvier 2023</span>
+                      <p class="item-description"> Analyse de l'efficacité des boitiers gps, planification des installations de boitiers et envoi de mail automatique FAYA  cocody</p>
+                    </div>
+                    <div class="resume-item"><span class="item-arrow"></span>
+                      <h5 class="item-title">Professeur python,Excel et word </h5><span class="item-details">WisdomEducation / 2021</span>
                       <p class="item-description">Professeur python des élèves en classe de 1<sup>ère</sup> et Tle de numérique et Science Informatique(freelance); Rivera 3  cocody</p>
                     </div>
                     <div class="resume-item"><span class="item-arrow"></span>
