--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                   <div class="col-block experience">
                     <h3 class="col-title">Experience</h3>
                     <div class="resume-item"><span class="item-arrow"></span>
-                      <h5 class="item-title">Assistant responsable contrôle logistique/h5><span class="item-details">Porteo Group/ Mai 2023 - En cours 2023</span>
+                      <h5 class="item-title">Assistant responsable contrôle logistique</h5><span class="item-details">Porteo Group/ Mai 2023 - En cours 2023</span>
                       <p class="item-description"> -Production de la situation matériel du groupe 
 	-Taux de pannes; fréquences par type de pannes 
 	-Taux des sinistres
