--- a/index.html
+++ b/index.html
@@ -373,41 +373,39 @@
                   <div class="col-block experience">
                     <h3 class="col-title">Experience</h3>
                     <div class="resume-item"><span class="item-arrow"></span>
-                      <h5 class="item-title">Assistant responsable contrôle logistique</h5><span class="item-details">Porteo Group/ Mai 2023 - En cours 2023</span>
-                      <p class="item-description"> -Production de la situation matériel du groupe 
-	-Taux de pannes; fréquences par type de pannes 
-	-Taux des sinistres
--Contrôle des factures de location externe du groupe
--Mise en place d’un plan de suivi de la fluctuation des véhicules du pack auto au garage et  production du rapport d’éfficacité du garage.
--Contrôle facture fournisseur d’équipement de réparation.
--Production des statisques, Analyse  et contrôle des demande d’achats
--Suivie  assusrances et Entretien du groupe</p>
+                      <h5 class="item-title">Assistant responsable contrôle logistique</h5><span class="item-details">Porteo Group/ Mai 2023 - En cours 2023 CDD</span>
+                      <p class="item-description"> - Élaboration de la situation du matériel pour le groupe.
+  - Calcul des taux de pannes et fréquences selon les types de pannes.
+  - Évaluation des taux de sinistres.
+- Vérification des factures de location externe pour le groupe.
+- Établissement d'un plan de suivi de la fluctuation des véhicules du pack automobile au garage et création d'un rapport d'efficacité du garage.
+- Vérification des factures fournisseurs d'équipements en réparation.
+- Génération de statistiques, analyse et contrôle des demandes d'achats.
+- Suivi des assurances et de l'entretien de la flotte du groupe.</p>
                     </div>
                      <div class="resume-item"><span class="item-arrow"></span>
-                      <h5 class="item-title">Assistant responsable contrôle GPS</h5><span class="item-details">Porteo Group/ Janvier 2023 - Mai 2023</span>
-                      <p class="item-description"> -Suivi du Seuil de travail  journalier des engins de l’entréprise, Elaboration de la Statistique  périodique, Conception et réalisation d’un tableau de bord avec power bi pour la visualisation du processus de suivi de l’etat des boitiers GPS et l’activité du pack automobile du groupe porteo.
-                        Consolidation et traitement de la base de données du service de suivi GPS</p>
+                      <h5 class="item-title">Assistant Responsable contrôle GPS</h5><span class="item-details">Porteo Group/ Janvier 2023 - Mai 2023(CDD)</span>
+                      <p class="item-description"> Surveillance quotidienne du seuil d'activité des équipements de l'entreprise, création de statistiques périodiques, développement et déploiement d'un tableau de bord via Power BI pour la visualisation du processus de suivi de l'état des dispositifs GPS et de l'activité du parc automobile du groupe Porteo. Intégration et traitement des données de la base de données du service de suivi GPS pour l'analyse et la consolidation.</p>
                     </div>
                      <div class="resume-item"><span class="item-arrow"></span>
-                      <h5 class="item-title">Assistant responsable </h5><span class="item-details">Abidjan GPS / Novembre 2022 - Janvier 2023</span>
-                      <p class="item-description"> Analyse de l'efficacité des boitiers gps, planification des installations de boitiers et envoi de mail automatique FAYA  cocody</p>
+                      <h5 class="item-title">AssistÉvaluation de la performance des dispositifs GPS, conception de la stratégie d'implémentation des dispositifs et automatisation de la communication via courrier électronique. FAYA  cocody</p>
                     </div>
                     <div class="resume-item"><span class="item-arrow"></span>
-                      <h5 class="item-title">Professeur python,Excel et word </h5><span class="item-details">WisdomEducation / 2021</span>
-                      <p class="item-description">Professeur python des élèves en classe de 1<sup>ère</sup> et Tle de numérique et Science Informatique(freelance); Rivera 3  cocody</p>
+                      <h5 class="item-title">Formateur python,Excel et word </h5><span class="item-details">WisdomEducation / 2021 Freelence </span>
+                      <p class="item-description">Professeur python des élèves  en classe de 1<sup>ère</sup>, Tle de numérique et Science Informatique(freelance) et  de particulier </p>
                     </div>
                     <div class="resume-item"><span class="item-arrow"></span>
-                      <h5 class="item-title">Projet Ministère de la reconciliation et de la cohésion Sociale</h5><span class="item-details">2021(Projet Ecole)</span>
-                      <p class="item-description">Développpement du site internet dudit Ministère pour la journée National de la Paix ;Rivera Palmeraie cocody</p>
+                      <h5 class="item-title">Projet Ministère de la reconciliation et de la cohésion Sociale</h5><span class="item-details">2021(2 mois) -Developpeur  -ABIDJAN /Cocody</span>
+                      <p class="item-description">Conception et développement du site internet du Ministère pour la Journée Nationale de la Paix ; Rivera Palmeraie Cocody</p>
                     </div>
                     <div class="resume-item"><span class="item-arrow"></span>
-                      <h5 class="item-title">Messi Media</h5><span class="item-details">develeppement de site internet Statique / Infographie 2019-2021</span>
-                      <p class="item-description">Yopougon</p>
+                      <h5 class="item-title">Nour TECH </h5><span class="item-details">2021(7 mois) -Developpeur  -ABIDJAN /Cocody </span>
+                      <p class="item-description">Création d'une plateforme offrant une vue globale de l'évolution de la COVID-19 en Côte d'Ivoire. Génération de statistiques et de prédictions sur son évolution future</p>
                     </div>
 
                     <div class="resume-item"><span class="item-arrow"></span>
-                      <h5 class="item-title">Artisan d'ici</h5><span class="item-details">Community manager/ Infographie </span>
-                      <p class="item-description">Création de contenu graphique et mise en ligne; Rivera Palmeraie cocody</p>
+                      <h5 class="item-title">Artisan d'ici</h5><span class="item-details"> 2019(6mois) - Community manager/ Infographie </span>
+                      <p class="item-description">Expérience dans la création de contenu graphique et sa mise en ligne, notamment pour le projet Rivera Palmeraie à Cocody</p>
                     </div>
 
 
@@ -428,8 +426,8 @@
               </div>
               <div class="row">
                 <div class="col-12 col-md-6">
-                  <div class="single-skill" data-percentage="80">
-                    <div class="skill-info"><span class="skill-name">HTML/CSS/JS</span><span class="skill-percentage"></span></div>
+                  <div class="single-skill" data-percentage="85">
+                    <div class="skill-info"><span class="skill-name">Excel Avancé/ Power Bi </span><span class="skill-percentage"></span></div>
                     <div class="progress skill-progress">
                       <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
@@ -454,8 +452,8 @@
                       <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
-                  <div class="single-skill" data-percentage="80">
-                    <div class="skill-info"><span class="skill-name">Django</span><span class="skill-percentage"></span></div>
+                  <div class="single-skill" data-percentage="65">
+                    <div class="skill-info"><span class="skill-name">JAVA</span><span class="skill-percentage"></span></div>
                     <div class="progress skill-progress">
                       <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
@@ -477,7 +475,7 @@
                   <p class="video-description">Certification Microsoft Word  international / Certification Microsoft Excel international  /Certification Microsoft PowerPont international / Certification Python Associated Technologie international </p>
                   <p class="video-description">Grâce au programme certiport</p>
                 </div>
-                <div class="col-12 col-lg-6 video-part"><a class="media-lightbox" href="https://www.youtube.com/watch?v=doteMqP6eSc" data-lightbox>
+                <div class="col-12 col-lg-6 video-part"><a class="media-lightbox" href="https://www.youtube.com/watch?v=uRFc2G4JmRU" data-lightbox>
                     <div class="embed-responsive embed-responsive-16by9">
                       <div class="embed-responsive-item element-cover-bg"><span class="play-wrapper"><i class="icon ion-md-play"></i></span></div>
                     </div>
