--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="row h-100 align-items-center justify-content-center">
         <div class="col-12 col-lg-8 home-content text-center">
           <h1 class="home-name">Augustin <span>GRAH</span></h1>
-          <h4 class="cd-headline clip home-headline">Je suis un <span class="cd-words-wrapper single-headline"><b class="is-visible">Developpeur</b><b>Graphiste</b><b>Freelanceur</b></span></h4>
+          <h4 class="cd-headline clip home-headline">Je suis un <span class="cd-words-wrapper single-headline"><b class="is-visible">Développeur</b><b>Graphiste</b><b>Un freelanceur </b></span></h4>
         </div>
       </div>
     </div>
@@ -111,9 +111,9 @@
                 <div class="col-12 col-lg-7 info-content">
                   <div class="content-block">
                     <h2 class="content-subtitle">Qui suis-je?</h2>
-                    <h6 class="content-title">Je suis Ange Augustin GRAH -Developpeur Full-Stack, Graphiste,Data Analyste</h6>
+                    <h6 class="content-title">Je suis Ange Augustin GRAH / Développeur Full Stack et analyste BI et Data</h6>
                     <div class="content-description">
-                      <p>Passionnée de l'univers de l'informatique et doté d'une grande curiosité, je suis diplomée de l'Université Felix Houphouët BOIGNY d'ABIDJAN COCODY. Polyvalent et fort de 4 ans d'expérience. je me suis spécialisé dans le develeppement Back-End et la création d'Application Web et Solution Informatique en générale, je suis aussi capable de faire de l'intégration  Web , d'organiser des sondages et analyser les données et de l'Infographie.</p>
+                      <p>Dotée d'une passion pour le monde de l'informatique et d'une curiosité insatiable, j'ai obtenu mon diplôme de l'Université Félix Houphouët-Boigny à Abidjan Cocody. Avec une polyvalence acquise au fil de 4 ans d'expérience, j'ai développé une expertise dans le domaine du développement Back-End ainsi que dans la création d'applications web et de solutions informatiques globales. Mon domaine de compétence s'étend également à l'intégration web, à la gestion de sondages et à l'analyse de données, en plus de mes compétences en infographie.</p>
                     </div>
                     <address class="content-info">
                       <div class="row">
@@ -388,7 +388,7 @@
                       <p class="item-description"> Surveillance quotidienne du seuil d'activité des équipements de l'entreprise, création de statistiques périodiques, développement et déploiement d'un tableau de bord via Power BI pour la visualisation du processus de suivi de l'état des dispositifs GPS et de l'activité du parc automobile du groupe Porteo. Intégration et traitement des données de la base de données du service de suivi GPS pour l'analyse et la consolidation.</p>
                     </div>
                      <div class="resume-item"><span class="item-arrow"></span>
-                      <h5 class="item-title">AssistÉvaluation de la performance des dispositifs GPS, conception de la stratégie d'implémentation des dispositifs et automatisation de la communication via courrier électronique. FAYA  cocody</p>
+                      <h5 class="item-title"> Stage Abidjan GPS</h5><span class="item-details">Porteo Group/ Janvier 2023 - Mai 2023(CDD)</span><p class="item-description">Évaluation de la performance des dispositifs GPS, conception de la stratégie d'implémentation des dispositifs et automatisation de la communication via courrier électronique. FAYA  cocody</p>
                     </div>
                     <div class="resume-item"><span class="item-arrow"></span>
                       <h5 class="item-title">Formateur python,Excel et word </h5><span class="item-details">WisdomEducation / 2021 Freelence </span>
