--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         </div>
                       </div>
                     </address>
-                    <div class="d-block d-sm-flex align-items-center"><a class="btn content-download button-main button-scheme" href="img/CV AUGUSTIN GRAH.pdf" role="button">Download CV</a>
+                    <div class="d-block d-sm-flex align-items-center"><a class="btn content-download button-main button-scheme" href="img/CV Grah Ange.pdf" role="button">Telcharger mon CV</a>
                       <ul class="list-unstyled list-inline content-follow">
                         <li class="list-inline-item"><a href="https://twitter.com/Grahaugustin"><i class="icon ion-logo-twitter"></i></a></li>
                         <li class="list-inline-item"><a href="https://ci.linkedin.com/in/augustin-grah-3b1327125"><i class="icon ion-logo-linkedin"></i></a></li>
