--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="row h-100 align-items-center justify-content-center">
         <div class="col-12 col-lg-8 home-content text-center">
           <h1 class="home-name">Augustin <span>GRAH</span></h1>
-          <h4 class="cd-headline clip home-headline">Je suis un <span class="cd-words-wrapper single-headline"><b class="is-visible">Développeur</b><b>Graphiste</b><b>Un freelanceur </b></span></h4>
+          <h4 class="cd-headline clip home-headline">Je suis un <span class="cd-words-wrapper single-headline"><b class="is-visible">Ingénieur informaticien</b><b>Développeur web et mobile</b><b>Un Analyste BI </b></span></h4>
         </div>
       </div>
     </div>
